force-app/main/default/objects/CycleMapping__c/CycleMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>scaleMatters Cycle Configuration Mapping</label>
</CustomObject>