force-app/main/default/objects/CycleMapping__c/fields/Contact_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cycle_Date__c</fullName>
    <label>Contact Cycle Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>