force-app/main/default/objects/CycleMapping__c/fields/Cycle_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Name__c</fullName>
    <label>Cycle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>