force-app/main/default/objects/CycleMapping__c/fields/Lead_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Cycle_Date__c</fullName>
    <label>Lead Cycle Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>