force-app/main/default/objects/CycleMapping__c/fields/Number_of_Days_for_New_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_for_New_Contact_Record__c</fullName>
    <label>Number of Days for New Contact Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>