force-app/main/default/objects/CycleMapping__c/fields/Number_of_Scheduled_Days_for_New_Contact__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scheduled_Days_for_New_Contact__c</fullName>
    <label>Number of Scheduled Days for New Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>