force-app/main/default/objects/CycleMapping__c/fields/ScheduledDays__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDays__c</fullName>
    <label>Number of Scheduled Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>